tests/valid/c.fl
puts :: proc extern (*u8);

printf :: proc extern (*u8, i32);
