tests/invalid/proc_type_inline.fl
Sum :: proc inline (i32, i32) -> i32;
